--- a/page-home.html
+++ b/page-home.html
@@ -16,14 +16,29 @@
 		</div>		
 	</div>
 
-	<div style="float:left; display:block; margin:0; padding:0; width:100%; height:200px;">
-		<div class="col-xs-2 backdrop">
-			<p style="color: #ffffff;">Links: </p>
-		    <div class="tree-pittsburgh-logo">
-				<a href="http://treepittsburgh.org"><img src="img/tree-pittsburgh-lg.jpg" width="64" height="64"></a>
-		    </div>			
-		</div>
+
+	<div class="col-xs-10">
+		
 	</div>
+
+	<div class="col-xs-2">
+		
+	</div>
+
+	<div class="col-xs-12">
+		
+	</div>	
+
+	<div class="col-xs-12">
+		<div style="float:left; display:block; margin:0; padding:0; width:100%; height:200px;">
+			<div class="col-xs-2 backdrop">
+				<p style="color: #ffffff;">Links: </p>
+			    <div class="tree-pittsburgh-logo">
+					<a href="http://treepittsburgh.org"><img src="img/tree-pittsburgh-lg.jpg" width="64" height="64"></a>
+			    </div>			
+			</div>
+		</div>		
+	</div>	
 
 </div>
 <!--
